4-resilia-pet form update

--- a/4-resilia-pet/resilia-pet.html
+++ b/4-resilia-pet/resilia-pet.html
@@ -21,6 +21,14 @@
             <div class="nav-item">Contato</div>
         </nav>
     </header>
+    <form>
+        <div>Informe seu e-mail para mais informações</div>
+        <div>
+            <label for="email"></label>
+            <input type="text" name="email" id="email" placeholder="E-mail">
+            <button>Enviar</button>
+        </div>
+    </form>
     <main>
     </main>
 
