4-resilia-pet footer update

--- a/4-resilia-pet/resilia-pet.html
+++ b/4-resilia-pet/resilia-pet.html
@@ -33,7 +33,14 @@
     </main>
 
     <footer>
-        Todos os direitos reservados
+        <div class="footer">
+            <div>Vitor@2021</div>
+            <div class="footer-text">Todos os direitos reservados</div>
+        </div>
+        <div class="footer-img">
+            <img class="social-icon" src="./img/facebook-icon.png" alt="Facebook">
+            <img class="social-icon" src="./img/insta-icon.png" alt="Instagram">
+        </div>
     </footer>
 
 </body>
