4-resilia-pet dropdown button added

--- a/4-resilia-pet/resilia-pet.html
+++ b/4-resilia-pet/resilia-pet.html
@@ -15,7 +15,13 @@
         <div class="logo">
             AdoteAqui!
         </div>
-        <nav>
+        <img class="dropdown-button" src="./img/menu-icon.png" alt="Menu">
+        <nav class="navbar-button navbar-hidden">
+            <div class="nav-item">Home</div>
+            <div class="nav-item">Sobre</div>
+            <div class="nav-item">Contato</div>
+        </nav>
+        <nav class="navbar">
             <div class="nav-item">Home</div>
             <div class="nav-item">Sobre</div>
             <div class="nav-item">Contato</div>
